--- a/smacofBasics/smacofIntro.Rmd
+++ b/smacofBasics/smacofIntro.Rmd
@@ -39,7 +39,8 @@ suppressPackageStartupMessages(library(tinytex, quietly = TRUE))
 frequently. All suggestions for improvement are welcome. All Rmd, tex,
 html, pdf, R, and C files are in the public domain. Attribution will be
 appreciated, but is not required. The files can be found at
-<https://github.com/deleeuw/smacofCode>.
+<https://github.com/deleeuw> in the repositories smacofCode, smacofManual,
+and smacofExamples.
 
 \sectionbreak
 
@@ -63,30 +64,33 @@ $x_i$, with $i=1,\cdots,n$, such that
 \end{equation}
 (the symbol $:=$ is used for definitions). Note that *distance matrix completion* (@fang_oleary_12) is an example of metric MDS.
 
-There is also something called *non-metric MDS*. The terms is ambiguous and can mean either one of two things. One definition is that
+Besides metric MDS there is also something called *non-metric MDS*. The terms is ambiguous and can mean either one of two things. One definition is that
 we do not have numerical information about the dissimilarities, but only
 ordinal of nominal information. In the ordinal case we know that some dissimilarities are larger or smaller than others, in the nominal case
 that the objects are partitioned into groups and  within-group
 distances are smaller than between-group distances. An MDS analysis
 is also non-metric if we have numerical dissimilarities but we decide
-to use only the ordinal or nominal information as data in out MDS 
-analysis. Thus our approximation problem is of the form
+to use only the ordinal or nominal information in the dissimilarities
+as data for our MDS analysis. The data are a binary relation $\preceq_\delta$ on a subset of
+$\mathcal{O}\times\mathcal{O}$. There is a second binary relation $\preceq_d$ on
+$\mathbb{R}_+\times\mathbb{R}_+$. We want to find the configuration $X$
+such that
 \begin{equation}
-\alpha\{(o_i,o_j),(o_k,o_l)\}\approx \beta(d_{ij}(X),d_{kl}(X)),
-(\#eq:mdsnonmetricformdef)
+(o_i,o_j)\preceq_\delta(o_k,o_l)\quad\Rightarrow\quad d_{ij}(X)\preceq_d d_{kl}(X).
+(\#eq:relations)
 \end{equation}
-where $\alpha$ and $\beta$ are appropriate binary relations.
+For most non-metric MDS problems both $\preceq_\delta$ and $\prec_d$ are partial orders, but for nominal data they can be equivalence relations.
 
-The term "non-metric" is also used in the case in which we do have numerical dissmilarities $\delta_{ij}$, but the MDS problem is to find Euclidean distances which approximate some partially unknown function of the dissimilarities.  The function should be member of a well-defined class of functions, for
+The term "non-metric" is sometimes also used in the case in which we do have numerical dissimilarities $\delta_{ij}$, but the MDS problem is to find Euclidean distances which approximate some partially unknown function of the dissimilarities. The function should be member of a well-defined class of functions, for
 instance a third degree polynomial or a piecewise linear spline on a
-given knot sequence. The MDS techniquw not only find the map of 
+given knot sequence. The MDS technique not only finds the map of 
 $\mathcal{O}$ into $\mathbb{R}^p$, but also chooses a function $f$
 from the set $\mathfrak{D}$ to improve the approximation. 
 \begin{equation}
 f(\delta_{ij})\approx d_{ij}(X).
-(\#eq:mdsnonlineardef)
+(\#eq:mdsnldef)
 \end{equation}
-Note that \@ref(eq:mdsnonlineardef) implies that $f$ is applied to each 
+Note that \@ref(eq:mdsnldef) implies that $f$ is applied to each 
 dissimilarity separately. Thus $\mathfrak{D}$ consists of real-valued
 functions of a single non-negative real variable.
 
@@ -99,49 +103,55 @@ additive constant (@messick_abelson_56). And, as another consequence, $\mathfrak
 only a single element, the identity transformation, in which case
 non-linear MDS is metric MDS.
 
-One radical way to solve this terminological dilemma is to simply define 
-MDS as solving
+One way to solve this terminological dilemma is to simply define 
+MDS as finding an approximate solution $(X,\Delta)$ to
 \begin{subequations}
 \begin{align}
-D(X)&\approx\Delta,(\#eq:gmdsdef1)\\
-\Delta&\in\mathfrak{D},(\#eq:gmdsdef2)
+\Delta&\in\mathfrak{D}(\#eq:gmdsdef1),\\
+X&\in\mathfrak{X}(\#eq:gmdsdef2),\\
+D(X)&=\Delta(\#eq:gmdsdef3),
 \end{align}
 \end{subequations}
-where $D(X)$ is the matrix of Euclidean distances and $\mathfrak{D}$ is a set of *transformed dissimilarities* in the non-linear case or a set of *quantified dissimilarities* in the non-metric case. We can then freely discuss
+where $D(X)$ is the matrix of Euclidean distances and $\mathfrak{D}$ is the set of *transformed dissimilarities* in the non-linear case or the set of *quantified dissimilarities* in the non-metric case. We can then freely discuss
 metric MDS, linear MDS, non-linear MDS, and non-metric MDS as special cases,
 defined by different sets $\mathfrak{D}$.
 
-# Kruskal's Stress
+
+
+# Loss Function
 
 In the pioneering papers @kruskal_64a and @kruskal_64b the MDS problem
-was formulated for the first time as minimization of an explicit loss
-function, which measures the quality of the approximation of the
-dissimilarities by the distances. To be historically accurate, we should
-also mention that the non-metric MDS technique proposed by @shepard_62a and @shepard_62b can be reformulated as minimization of an explicit loss function (see, for example, @deleeuw_E_17e). In fact the classical Young-Householder-Torgerson MDS technique (@torgerson_52) for metric MDS also can be formulated as minimizing an explicit least squares loss function (@deleeuw_heiser_C_82).
+was formulated for the first time as minimization of an explicit *loss
+function* or *badness-of-fit function*, which measures the quality of the approximation of the dissimilarities by the distances. To be historically accurate, we should
+mention that the non-metric MDS technique proposed by @shepard_62a and @shepard_62b can be reformulated as minimization of an explicit loss function (see, for example, @deleeuw_E_17e). And the classical Young-Householder-Torgerson MDS technique (@torgerson_52) for metric MDS can be reformulated as minimizing an explicit least squares loss function (@deleeuw_heiser_C_82) as well.
+But neither of these two predecessors was formulated originally as an explicit minimization
+problem for a specific loss function
 
 ## Metric MDS
 
 The loss function in least squares
-metric Euclidean MDS is called *raw stress* or *Kruskal's raw stress*
+metric Euclidean MDS is called *raw stress* 
 and is defined as 
 \begin{equation}
-\sigma_R(X):=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2.
+\sigma_R(X):=\frac12\mathop{\sum\sum}_{1\leq j<i\leq n}w_{ij}(\delta_{ij}-d_{ij}(X))^2.
 (\#eq:stressdef)
 \end{equation}
+The subscript R in $\sigma_R$ stands for "raw", because we will discuss
+other least squares loss functions for which we will also use the
+symbol $\sigma$, but with other subscripts.
 
 In definition
 \@ref(eq:stressdef) the $w_{ij}$ are known non-negative *weights*, the
 $\delta_{ij}$ are the known non-negative *dissimilarities* between
 objects $o_i$ and $o_j$, and the $d_{ij}(X)$ are the *distances* between
 the corresponding points $x_i$ and $x_j$. The summation is over all
-$\binom{n}{2}$ pairs $(i,j)$ with $j>i$, i.e. over elements below the
-diagonal of the matrices $W$ and $\Delta$. The subscript $R$ in $\sigma_R$
-stands for "raw". From now on we use "metric
-MDS" to mean Least Squares Metric Euclidean MDS.
+pairs $(i,j)$ with $w_{ij}>0$. From now on we use "metric
+MDS" to mean the minimization of $\sigma_R$.
 
 The $n\times p$ matrix $X$, which has the coordinates $x_i$ of the $n$
 points as its rows, is called the *configuration*, where $p$ is the
-*dimension* of the Euclidean space in which we make the map. The metric MDS problem (of dimension $p$, for given $W$
+*dimension* of the Euclidean space in which we make the map. 
+The metric MDS problem (of dimension $p$, for given $W$
 and $\Delta$) is the minimization of \@ref(eq:stressdef) over the
 $n\times p$ configurations $X$.
 
@@ -150,7 +160,8 @@ precision or importance of the corresponding dissimilarities. Some of
 the weights may be zero, which can be used to code *missing data*. If
 all weights are positive we have *complete data*. If we have complete
 data, and all weights are equal to one, we have *unweighted* metric MDS.
-The pioneering papers by Shepard, Kruskal, and Guttman only consider the unweighted case. Weights were only introduced in MDS in @deleeuw_C_77. 
+The pioneering papers by Shepard, Kruskal, and Guttman only consider the 
+unweighted case. Weights were only introduced in MDS in @deleeuw_C_77. 
 
 We assume throughout that the weights are *irreducible* (@deleeuw_C_77).
 This means there is no partitioning of the index set
@@ -167,7 +178,7 @@ the diagonal). The somewhat mysterious factor $\frac12$ in definition
 \@ref(eq:stressdef) is there because it simplifies some of the formulas
 in later sections of this paper.
 
-## Non-linear and Non-metric MDS
+## Non-linear MDS
 
 
 Kruskal was not really interested in metric MDS and the "raw" loss
@@ -222,9 +233,12 @@ and he actually takes the square root of \@ref(eq:nstressdef) to define
 loss function \@ref(eq:nstressdef) over all $n\times p$ configurations
 $X$ and all admissible disparities $\Delta$.
 
+## Non-metric MDS
+
 ## Normalization
 
-Equation \@ref(eq:nstressdef) is only one way to normalize raw stress. Some obvious alternatives are discussed in detail in
+Equation \@ref(eq:nstressdef) is only one way to normalize raw stress. 
+Some obvious alternatives are discussed in detail in
 @kruskal_carroll_69 and @deleeuw_U_75a. In the terminology of
 @deleeuw_U_75a there are *explicit* and *implicit* normalizations.
 
@@ -276,14 +290,41 @@ disparities and the sphere defined by \@ref(eq:explicit2) is equivalent
 to first projecting on the cone and then normalizing the projection (see
 also @bauschke_bui_wang_18).
 
-In the version of non-metric MDS discussed in this manualwe need more flexibility. For algorithmic reasons that may become clear later on, we will go with the original \@ref(eq:nstressdef), i.e. with the implicitly normalized
+In the version of non-metric MDS discussed in this manual we need more flexibility. For algorithmic reasons that may become clear later on, we will go with the original \@ref(eq:nstressdef), i.e. with the implicitly normalized
 Kruskal's stress. For the final results the choice between normalizations should not make a difference, but the iterative computations will be different for the
-diufferent choices.
+different choices.
 
 ## Some thoughts on ALS
 
-I will take this opportunity to clear up some misunderstandings and
-confusions that have haunted the early development of non-metric MDS.
+The formulation in equations \@ref(eq:gmdsdef1) and \@ref(eq:gmdsdef2) neatly separates the
+metric MDS part \@ref(eq:gmdsdef1) and the transformation/quantification part \@ref(eq:gmdsdef2).
+This second part is also often called the *optimal scaling* part.
+
+Equations \@ref(eq:gmdsdef1) and \@ref(eq:gmdsdef2) corresponds with the way most iterative non-linear and non-metric MDS techniques are implemented. The algorithms use *Alternating Least Squares* (ALS).
+There have been quite a few ALS algorithms avant-la-lettre, but as far as I know both the name 
+and ALS as a general approach to algorithm construction were first introduced in @deleeuw_R_68d, and then widely disseminated in a series of papers by
+De Leeuw, Young, and Takane in the 1970's (work summarized in @young_deleeuw_takane_C_80 and @young_81).
+
+In the ALS implementation of MDS two sub-algorithms are used in each iteration: one to improve the fit of the distances to the current disparities
+$\Delta$ and one to improve the fit of the disparities to the current distances.
+The two sub-algorithms define one major iteration of the MDS technique. In  formulas
+(using superscript $(k)$ for major iteration number) we start with $(X^{(0)},\Delta^{(0)})$
+and then alternate the mimization problems
+\begin{subequations}
+\begin{align}
+X^{(k+1)}&\ni\{\sigma(X^{(k+1)},\Delta^{(k)})=\min_{X\in\mathfrak{X}}\sigma(X,\Delta^{(k)})\},\\
+\Delta^{(k+1)}&\ni\{\sigma(X^{(k+1)},\Delta^{(k+1)})=\min_{\Delta\in\mathfrak{D}}\sigma(X^{(k+1)},\Delta)\},
+\end{align}
+\end{subequations}
+where $\ni$ is short for "such that".
+In MDS it is more realistic not to minimize loss in the sub-steps but merely to decrease it. Minimization in one or both of the two subproblems may itself require an infinite iterative method, which we have to truncate anyway. Thus
+\begin{subequations}
+\begin{align}
+X^{(k+1)}\in\mathfrak{X}&\ni\{\sigma(X^{(k+1)},\Delta^{(k)})<\sigma(X^{(k)},\Delta^{(k)})\},\\
+\Delta^{(k+1)}\in\mathfrak{D}&\ni\{\sigma(X^{(k+1)},\Delta^{(k+1)})<\sigma(X^{(k+1)},\Delta^{(k)})\}.
+\end{align}
+\end{subequations}
+
 
 ### The Single-Phase approach
 
@@ -866,5 +907,15 @@ lines(x, z3, col = "BLUE")
 ```
 
 ### Majorizing Stress
+
+
+# MDS topics not covered
+
+- asymmetric MDS
+- Non-Euclidean Distances
+- Non-Least-Squares Loss Functions
+- Rank Images
+- Shepard
+- McGee
 
 # References
