--- a/smacofUF/smacofUF.tex
+++ b/smacofUF/smacofUF.tex
@@ -156,7 +156,7 @@
 \title{Smacof at 50: A Manual\\
 Part 5: Unfolding in Smacof}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started December 12 2022, Version of April 26, 2024}
+\date{Started December 12 2022, Version of April 29, 2024}
 
 \begin{document}
 \maketitle
@@ -175,61 +175,76 @@ appreciated, but is not required. The files can be found at
 \url{https://github.com/deleeuw} in the repositories smacofCode, smacofManual,
 and smacofExamples.
 
-\subsection{Metric Unfolding}\label{metric-unfolding}
+\section{Introduction}\label{introduction}
 
-Metric unfolding is a special case of metric MDS, as implemented for example
-in smacofAC. Thus we minimize stress defined as
+In Multidimensional Unfolding (MDU) the objects of an MDS problem are partitioned into two sets.
+There is a set of \(n\) row-objects and a set of
+\(m\) column-objects, and a corresponding \(n\times p\) row-configuration \(X\) and \(m\times p\) column-configuration
+\(Y\). We minimize stress defined as
 \begin{equation}
-\sigma(X)=\sum_{i=1}^{N}\sum_{j=1}^{N}w_{ij}(\delta_{ij}-d_{ij}(X))^2.
+\sigma(X,Y):=\sum_{i=1}^{n}\sum_{j=1}^{n}w_{ij}(\delta_{ij}-d(x_i,y_j)^2.
+\label{eq:ufstress}
 \end{equation}
-For unfolding
-\[
-W=
-\kbordermatrix{
-&n&m\\
-n&0&U\\
-m&U'&0
-}
-\]
-In other words there is a set of \(n\) row-objects and a set of \(m\) column-objects. The withiin-set
-dissimilarities are missing, or ignored, and only the between-set dissimilarities are fitted.
-If we partition \(X\) as
-\[
-X=
+over both \(X\) and \(Y\). Here
+\begin{equation}
+d(x_i,y_j):=\sqrt{(x_i-y_j)'(x_i-y_j)}
+\label{eq:ufdist}
+\end{equation}
+Thus the within-set
+dissimilarities are missing, or ignored even if they are available, and only the between-set dissimilarities are fitted by between-set distances.
+
+If we define \(Z\) as
+\begin{equation}
+Z:=
 \kbordermatrix{
 \mbox{\ }&p\\
-n&Y\\
-m&Z
+n&X\\
+m&Y
 }
-\]
+\label{eq:ufzdef}
+\end{equation}
+and \(U\) as
+\begin{equation}
+U:=
+\kbordermatrix{
+&n&m\\
+n&0&W\\
+m&W'&0
+}
+\label{eq:ufudef}
+\end{equation}
 then we can also write
 \begin{equation}
-\sigma(Y,Z)=\sum_{i=1}^n\sum_{j=1}^mu_{ij}(\delta_{ij}-d(y_i,z_j))^2.
+\sigma(Z)=\sum_{i=1}^{n+m}\sum_{j=1}^{n+m}u_{ij}(\delta_{ij}-d_{ij}(Z))^2.
+\label{eq:ufzstress}
 \end{equation}
 
-By defining
-\[
-X=
-\kbordermatrix{
-\mbox{\ }&p\\
-n&Y\\
-m&Z
-}
-\]
-and
-\[
-W=
-\kbordermatrix{
-&n&m\\
-n&0&U\\
-m&U'&0
-}
-\]
-we can write
+Data Preferences Type A and Type B Conditional
 
-The multidimensional unfolding model for preference judgments is often attributed to (\textbf{coombs?}), (\textbf{kruskal\_carroll?}), (\textbf{roskam?})
+The unfolding model for preference judgments is often attributed to Clyde H. Coombs (1950),
+with further developments by Coombs and his co-workers reviewed in C. H. Coombs (1964).
+After this path-breaking work the digital computer took over, and minimization of loss function
+\eqref{eq:ufstress} and its variations was started by
+Roskam (1968) and Kruskal and Carroll (1969).
 
-\section{Initial Configuration}\label{initial-configuration}
+In this manual we are not interested in MDU as a psychological theory, as a model for
+preference judgments. We merely are interested in mapping off-diagonal dissimilarity
+comparisons into low-dimensional Euclidean space, i.e.~in making a picture of the
+data. In some cases (distance completion, distances with errors, spatial basis)
+
+\section{Loss function}\label{loss-function}
+
+\subsection{Metric}\label{metric}
+
+\subsection{Non-linear}\label{non-linear}
+
+\subsection{Non-metric}\label{non-metric}
+
+\subsection{Constraints}\label{constraints}
+
+\section{smacofUF}\label{smacofuf}
+
+\subsection{Initial Configuration}\label{initial-configuration}
 
 \[
 \sigma(C)=\sigma(\tilde C+(C-\tilde C))=\sum_{i=1}^n\sum_{j=1}^m((\delta_{ij}^2-\text{tr}\ A_{ij}\tilde C)-\text{tr}\ A_{ij}(C-\tilde C))^2
@@ -252,13 +267,110 @@ So we minimize
 \text{tr}\ (C-\{\tilde C + B(\tilde C)\})^2
 \]
 
+\subsection{Constraints}\label{constraints-1}
+
+\subsubsection{Centroid Restriction}\label{centroid-restriction}
+
+\[
+Z=\begin{bmatrix}
+X\\Y
+\end{bmatrix}=
+\begin{bmatrix}
+I\\
+D^{-1}G'
+\end{bmatrix}X=HX
+\]
+Minimize \(\text{tr}\ (\overline{Z}-HX)'V(\overline{Z}-HX)\). If there are
+no further restrictions on \(X\) the minimum is attained at \(\hat X=(H'VH)^+H'V\overline{Z}\).
+Otherwise write \(X=\hat X+(X-\hat X)\). Then
+\[
+\text{tr}\ (\overline{Z}-H\hat X-H(X-\hat X))'V(\overline{Z}-H\hat X-H(X-\hat X))=\\
+\text{tr}\ (\overline{Z}-H\hat X)'V(\overline{Z}-H\hat X)+
+\text{tr}\ (X-\hat X)'H'VH(X-\hat X)
+\]
+and we must minimize \(\text{tr}\ (X-\hat X)'H'VH(X-\hat X)\) for example over \(X'H'VHX=I\).
+That is maximizing \(H'VH\hat X=H'VHXM\) with \(M\) a symmetric matrix of Lagrange multipliers.
+Thus \(M^2=\hat X'H'VH\hat X\) and \(X=\hat X(\hat X'H'VH\hat X)^{-\frac12}\).
+
+Over \(\text{tr}\ X'H'VHX=1\) we get \(H'VH(X-\hat X)=\lambda H'VHX\) or
+\(X=(1-\lambda)H'VHX=H'VH\hat X\), wich means \(X\) is proportional to \(\hat X\) and we just have to normalize \(\hat X\) to find \(X\).
+
+The constraint \(X'V_{11}X=I\) is more difficult to deal with
+\[
+\text{tr}\ (X-\hat X)'H'VH(X-\hat X)=
+\]
+
+Oblique Procrustus
+
+\subsubsection{Linearly Restricted Unfolding}\label{linearly-restricted-unfolding}
+
+\paragraph{External Unfolding}\label{external-unfolding}
+
+\[
+\begin{bmatrix}
+X\\Y
+\end{bmatrix}=
+\begin{bmatrix}
+R&0\\
+0&S
+\end{bmatrix}
+\begin{bmatrix}
+P\\
+Q
+\end{bmatrix}
+\]
+\#\#\# Normalization Restrictions
+
+\(X'V_{11}X=I\).
+
+\subsubsection{Rank-one Restriction}\label{rank-one-restriction}
+
+\(Y=za'\)
+
+Minimize
+\[
+2\ \text{tr}\ (za'-\overline{Y})'V_{21}(X-\overline{X})+
+\text{tr}\ (za'-\overline{Y})'V_{22}(za'-\overline{Y})
+\]
+Removing irrelevant terms
+\[
+2\ z'\{V_{21}(X-\overline{X})-V_{22}\overline{Y}\}a+
+a'a.z'V_{22}z
+\]
+Let \(H=-V_{21}(X-\overline{X})-V_{22}\overline{Y}\). Minimize using \(z'V_{22}z=1\).
+\[
+a=H'z=\{\overline{Y}'V_{22}-(X-\overline{X})'V_{12})\}z
+\]
+
+\section{Examples}\label{examples}
+
+\subsection{Roskam}\label{roskam}
+
+\subsection{Breakfast}\label{breakfast}
+
+\subsection{Gold}\label{gold}
+
+\subsection{Indicator matrix / Matrices}\label{indicator-matrix-matrices}
+
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-coombs_64}
+Coombs, C. H. 1964. \emph{{A Theory of Data}}. Wiley.
+
+\bibitem[\citeproctext]{ref-coombs_50}
+Coombs, Clyde H. 1950. {``Psychological Scaling Without a Unit of Measurement.''} \emph{Psychological Review} 57: 148--58.
+
 \bibitem[\citeproctext]{ref-deleeuw_groenen_pietersz_U_06}
 De Leeuw, J., P. J. F. Groenen, and R. Pietersz. 2006. {``{Optimizing Functions of Squared Distances}.''} UCLA Department of Statistics. \url{https://jansweb.netlify.app/publication/deleeuw-groenen-pietersz-u-06/deleeuw-groenen-pietersz-u-06.pdf}.
+
+\bibitem[\citeproctext]{ref-kruskal_carroll_69}
+Kruskal, J. B., and J. D. Carroll. 1969. {``{Geometrical Models and Badness of Fit Functions}.''} In \emph{Multivariate Analysis, Volume II}, edited by P. R. Krishnaiah, 639--71. North Holland Publishing Company.
+
+\bibitem[\citeproctext]{ref-roskam_68}
+Roskam, E. E. 1968. {``{Metric Analysis of Ordinal Data in Psychology}.''} PhD thesis, University of Leiden.
 
 \end{CSLReferences}
 
